# sota

./: .env.example  .gitignore  .pre-commit-config.yaml  NOTES.md  PROMTS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_extended_examples.py  003_task_13.py  004_grade_meta.py
app/: config.py  errors.py  generator.py  grader.py  llm.py  logging_events.py  main.py  metrics.py  models.py  store.py  structured_log.py  task_types.py  validation.py  verifier.py
app/storage/: __init__.py  base.py  factory.py  memory.py  migrate.py  models_db.py  postgres.py
app/task13/: __init__.py  assistant.py  feedback.py  generator.py  grader.py  judge.py  justification.py  models.py  (+7 more)
dev/: docker-compose.yml
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
tests/: conftest.py  test_api.py  test_extended_task_types.py  test_generator.py  test_grader.py  test_llm.py  test_observability.py  test_storage.py  test_task13_assistant.py  test_task13_assistant_api.py  test_task13_batch.py  test_task13_create_task.py  test_task13_equiv.py  test_task13_fipi_fixtures.py  test_task13_generated_fixtures.py  test_task13_generator.py  test_task13_get_task.py  test_task13_golden_fixtures.py  test_task13_grade_api.py  test_task13_grader.py  test_task13_judge.py  test_task13_justification.py  test_task13_parser.py  test_task13_scoring.py  test_task13_storage.py  test_task13_verifier.py  test_validation.py  test_verifier.py
(+34 files in other folders)
